# kassandra-service

./: .gitignore  Cargo.toml  Makefile  README.md
attestation/: Cargo.toml
attestation/src/: attestation.rs  key.rs  lib.rs  report.rs  service.rs  types.rs  verifier.rs
client/: Cargo.toml  README.md
client/src/: com.rs  config.rs  error.rs  lib.rs  main.rs  query.rs  ratls.rs  tdx.rs  transparent.rs
enclave/: Cargo.toml  OSDK.toml  README.md
enclave/src/: com.rs  fmd.rs  host.rs  host_channel.rs  lib.rs  ratls.rs  report.rs
enclave/src/attestation/: mod.rs
host/: Cargo.toml  README.md
host/src/: com.rs  config.rs  db.rs  main.rs  scheduler.rs
host/src/db/: fetch.rs  utils.rs
service/: Cargo.toml  README.md  build.rs
shared/: Cargo.toml
shared/src/: communication.rs  db.rs  lib.rs  ratls.rs  tee.rs
shared/src/communication/: mod.rs  tcp.rs
tdx/: Cargo.toml  OSDK.toml  build.rs  create_build_tool.sh  x86_64-unknown-none.json
tdx/build-tdx/: Cargo.toml
tdx/build-tdx/src/: main.rs  manifest.rs  utils.rs
tdx/src/: com.rs  lib.rs
transparent/: Cargo.toml
transparent/src/: com.rs  main.rs
