[workspace]
resolver = "2"

exclude = [
    "tdx"
]
members = [ "client", "enclave", "host", "shared", "transparent"]

[workspace.dependencies]
borsh = "1.2"
clap = { version = "4.5.32", features = ["derive"] }
eyre = "0.6.12"
flume = "0.11.1"
fmd = {package = "polyfuzzy", git = "https://github.com/anoma/shielded-state-sync", features = ["serde"]}
hex = { version = "0.4.3", default-features = false }
home = "0.5.11"
rand_core = { version = "0.6", default-features = false }
reqwest = "0.12.14"
serde = { version = "1.0.218" , default-features = false, features = ["derive"]}
serde_cbor = { version = "0.11.2", default-features = false, features = ["alloc"] }
thiserror = {  version = "2.0.12" , default-features = false}
toml = "0.8.20"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["std", "tracing-log", "fmt", "ansi"] }
uuid = { version = "1.16.0", default-features = false }
x25519-dalek = "2.0.1"
