[workspace]
resolver = "2"

exclude = [
    "tdx"
]
members = [ "client", "enclave", "host", "shared", "transparent"]

[workspace.dependencies]
borsh = { version = "1.2", features = ["unstable__schema", "derive"] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
clap = { version = "4.5.32", features = ["derive"] }
curve25519-dalek = { version = "4.1.3", default-features = false }
eyre = "0.6.12"
flume = "0.11.1"
fmd = {package = "polyfuzzy", version = "0.5.0", features = ["serde", "zeroize"]}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
home = "0.5.11"
once_cell = { version = "1.21.1", default-features = false }
rand_core = { version = "0.6", default-features = false }
reqwest = "0.12.14"
serde = { version = "1.0.218" , default-features = false, features = ["derive"]}
serde_cbor = { version = "0.11.2", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
thiserror = {  version = "2.0.12" , default-features = false}
toml = "0.8.20"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["std", "tracing-log", "fmt", "ansi"] }
uuid = { version = "1.16.0", default-features = false }
x25519-dalek = "2.0.1"
