[package]
name = "fmd-enclave-service"
version = "0.1.0"
edition = "2021"

[features]
mock = ["tdx-quote/mock"]

[dependencies]
chacha20poly1305 = "0.10.1"
fmd = {package = "fuzzy-message-detection", path = "../../shielded-state-sync/fuzzy-message-detection", features = ["serde"]}
rand_core = { version = "0.6", default-features = false }
shared = { path = "../shared" }
tdx-quote = "0.0.3"
x25519-dalek = "2.0.1"
url = "2.5.4"

[dependencies.ostd]
version = "0.11.3"

[workspace]
exclude = ["target/osdk/base", "target/osdk/test-base"]
