[package]
name = "fmd-enclave-service"
description = "The logic to be run by the enclave. Does not include enclave specific implementation details."
version = "0.0.1"
edition = "2024"

[dependencies]
fmd = {package = "fuzzy-message-detection", path = "../../shielded-state-sync/fuzzy-message-detection", features = ["serde"]}
shared = { path = "../shared" }
x25519-dalek = "2.0.1"

