[package]
name = "fmd-enclave-service"
description = "The logic to be run by the enclave. Does not include enclave specific implementation details."
version = "0.0.1-alpha"
edition = "2024"

[dependencies]
chacha20poly1305.workspace = true
fmd.workspace = true
shared = { package = "kassandra-shared", path = "../shared" }
x25519-dalek = "2.0.1"

