[package]
name = "host"
description = "The code that will run on the host environment hosting the enclave"
version = "0.0.1"
edition = "2024"

[dependencies]
clap.workspace = true
home.workspace = true
namada = {package = "namada_sdk", path = "../../namada/crates/sdk" }
reqwest.workspace = true
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde_cbor = { workspace = true, features = ["std"] }
shared = { path = "../shared", features = ["std"] }
tokio = { version = "1.44.1", features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
serde = { version = "1.0.218", features = ["derive"] }