[package]
name = "host"
description = "The code that will run on the host environment hosting the enclave"
version = "0.0.1"
edition = "2024"

[dependencies]
borsh.workspace = true
clap.workspace = true
eyre.workspace = true
home.workspace = true
flume.workspace = true
futures = "0.3.31"
namada = {package = "namada_sdk", path = "../../namada/crates/sdk" }
rayon = "1.10.0"
reqwest.workspace = true
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde_cbor = { workspace = true, features = ["std"] }
shared = { path = "../shared", features = ["std"] }
tokio = { version = "1.44.1", features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber  = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["std"] }