[package]
name = "service"
authors = ["Heliax AG<hello@heliax.dev>"]
version = "0.0.1"
license = "GPL-3.0"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview"}
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview"}