[package]
name = "kassandra-shared"
description = "Logic and types shared between multiple components of the service"
version = "0.0.1-alpha"
edition = "2024"
license = "GPL-3.0"

[features]
std = [
    "cobs/std",
    "serde_cbor/std",
    "serde/std",
]

[dependencies]
borsh.workspace = true
chacha20poly1305 = { workspace = true, features = ["rand_core"] }
cobs = { version = "0.3.0" , default-features = false, features = ["alloc"] }
fmd.workspace = true
hex.workspace = true
once_cell.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_cbor.workspace = true
sha2.workspace = true
tdx-quote = { version = "0.0.3", default-features = false }
thiserror.workspace = true
x25519-dalek.workspace = true
