[package]
name = "fmd-tdx-enclave-service"
description = "A TDX specific implementation of the secure enclave logic of this service"
version = "0.0.1"
edition = "2024"

[features]
mock = ["tdx-quote/mock"]

[dependencies]
drbg = {version = "1.0.1", default-features = false}
enclave = {package = "fmd-enclave-service", path = "../enclave" }
rand_core = { version = "0.6", default-features = false }
shared = { path = "../shared" }
tdx-quote = "0.0.3"

[dependencies.ostd]
version = "0.11.3"

[workspace]
exclude = ["target/osdk/base", "target/osdk/test-base"]
