[package]
name = "fmd-tdx-enclave-service"
description = "A TDX specific implementation of the secure enclave logic of this service"
version = "0.0.1"
edition = "2024"

[features]
mock = ["tdx-quote/mock"]

[dependencies]
drbg = {version = "1.0.1", default-features = false}
enclave = {package = "fmd-enclave-service", path = "../enclave" }
getrandom = {version ="0.2.15", default-features = false, features = ["custom"]}
rand_core = { version = "0.6", default-features = false }
shared = { path = "../shared" }
tdx-quote = "0.0.3"
x25519-dalek = "2.0.1"

[dependencies.ostd]
version = "0.14.1"

[workspace]
exclude = ["target/osdk/base", "target/osdk/test-base", "osdk_tmp"]
