[package]
name = "transparent"
version = "0.0.1-alpha"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
enclave = {package = "fmd-enclave-service", path = "../enclave" }
rand_core.workspace = true
shared = { package = "kassandra-shared", path = "../shared", features = ["std"] }
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true